[FLINK-26261] Wait for JobManager deployment ready before accessing REST API